--- a/css/Style.css
+++ b/css/Style.css
@@ -317,3 +317,13 @@ input[type="text"] {
     display: flex;
     justify-content: space-between; 
 }
+#confetti {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; 
+            z-index: 9999; 
+       
+        }
